--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ apache-airflow-providers-postgres
 apache-airflow-providers-http
 apache-airflow-providers-amazon
 apache-airflow-providers-google
+apache-airflow-providers-postgres==5.7.1
+apache-airflow-providers-http==4.5.1
+apache-airflow-providers-amazon==8.8.0
+psycopg2-binary==2.9.7
+pandas==2.1.1
+requests==2.31.0
+EOF
