--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,9 +12,9 @@ x-airflow-common:
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     AIRFLOW__WEBSERVER__EXPOSE_CONFIG: 'true'
-    AIRFLOW__WEBSERVER__RBAC: 'true'
-    AIRFLOW__WEBSERVER__AUTHENTICATE: 'true'
-    AIRFLOW__WEBSERVER__AUTH_BACKEND: 'airflow.contrib.auth.backends.password_auth'
+    # Simple Auth Manager configuration
+    AIRFLOW__WEBSERVER__AUTH_MANAGER: 'airflow.auth.managers.simple_auth_manager.SimpleAuthManager'
+    AIRFLOW__SIMPLE_AUTH_MANAGER__AUTH_MANAGER_PASSWORDS_FILE: '/opt/airflow/simple_auth_manager_passwords.json'
     # Optimize for side project
     AIRFLOW__CORE__MAX_ACTIVE_RUNS_PER_DAG: 1
     AIRFLOW__CORE__MAX_ACTIVE_TASKS_PER_DAG: 2
@@ -26,10 +26,11 @@ x-airflow-common:
     context: .
     dockerfile: DOCKERFILE
   volumes:
-    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/Airflow-Docker-setup/dags
-    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/Airflow-Docker-setup/logs
-    - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/Airflow-Docker-setup/config
-    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/Airflow-Docker-setup/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+    - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
+    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ./simple_auth_manager_passwords.json:/opt/airflow/simple_auth_manager_passwords.json
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on: &airflow-common-depends-on
     postgres:
@@ -58,12 +59,9 @@ services:
 
   airflow-webserver:
     <<: *airflow-common
-    command: api-server
+    command: webserver
     ports:
       - "8080:8080"
-    volumes:
-      - ./simple_auth_manager_passwords.json:/opt/Airflow-Docker-setup/simple_auth_manager_passwords.json
-
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
       interval: 30s
@@ -136,7 +134,7 @@ services:
     environment:
       <<: *airflow-common-env
       _AIRFLOW_DB_UPGRADE: 'true'
-      _AIRFLOW_WWW_USER_CREATE: ${_AIRFLOW_WWW_USER_CREATE}
-      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME}
-      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD}
     user: "0:0"
+
+volumes:
+  postgres-db-volume:
